--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@ethersproject/providers": "^5.5.3",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "framer-motion": "^6.2.6",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
