--- a/package.json
+++ b/package.json
@@ -13,13 +13,26 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@ethersproject/providers": "^5.5.3",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@typechain/hardhat": "^4.0.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.5.4",
     "framer-motion": "^6.2.6",
+    "hardhat": "^2.8.4",
+    "hardhat-gas-reporter": "^1.0.8",
+    "mocha": "^9.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "solidity-coverage": "^0.7.20",
+    "ts-node": "^10.5.0",
+    "typechain": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
