--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^0.26.0",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
