--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "framer-motion": "^6.2.6",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.8",
+    "ipfs-http-client": "^56.0.1",
     "mocha": "^9.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "solidity-coverage": "^0.7.20",
     "ts-node": "^10.5.0",
-    "typechain": "^7.0.0"
+    "typechain": "^7.0.0",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
