--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compile": "npx hardhat compile",
+    "deploy": "npx hardhat run scripts/deploy.ts --network localhost"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
@@ -33,9 +35,11 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.2.0",
     "solidity-coverage": "^0.7.20",
     "ts-node": "^10.5.0",
     "typechain": "^7.0.0",
+    "web3": "^1.7.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
