--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run scripts/deploy.ts --network localhost"
+    "deploy": "npx hardhat run scripts/deploy.ts --network localhost",
+    "deploy:mumbai": "npx hardhat run scripts/deploy.ts --network mumbai"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
