--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "axios": "^0.26.0",
+    "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
