--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ NEXT_PUBLIC_NETWORK='mumbai';
 NEXT_PUBLIC_ETHERSCAN=https://mumbai.polygonscan.com/address/
 NEXT_PUBLIC_GOV=asdfasdf
 NEXT_PUBLIC_FACTORY_ADDR=0x5FbDB2315678afecb367f032d93F642f64180aa3
+
+MNEMONIC_CELO=ABC123ABC123ABC123ABC123ABC123ABC1
