cloud functions authentication

--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
+    "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.19.0",
     "framer-motion": "^6.2.6",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.8",
     "ipfs-http-client": "^51.0.1",
