--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eth-sig-util": "^3.0.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
