--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@toruslabs/torus-embed": "^1.21.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
+    "@walletconnect/web3-provider": "^1.7.7",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "authereum": "^0.1.14",
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
@@ -32,6 +35,7 @@
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.19.0",
+    "fortmatic": "^2.2.1",
     "framer-motion": "^6.2.6",
     "fs": "^0.0.1-security",
     "hardhat": "^2.8.4",
