--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "fortmatic": "^2.2.1",
     "framer-motion": "^6.2.6",
     "fs": "^0.0.1-security",
-    "hardhat": "^2.8.4",
+    "hardhat": "^2.9.3",
     "hardhat-gas-reporter": "^1.0.8",
     "ipfs-http-client": "^51.0.1",
     "mocha": "^9.2.0",
@@ -57,6 +57,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "hardhat-contract-sizer": "^2.5.1",
     "typescript": "4.5.5"
   }
 }
