--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint",
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run scripts/deploy.ts --network localhost",
-    "deploy:mumbai": "npx hardhat run scripts/deploy.ts --network mumbai"
+    "deploy:mumbai": "npx hardhat run scripts/deploy.ts --network mumbai",
+    "flatten": "npx hardhat flatten > flattened.sol",
+    "size": "yarn hardhat size-contracts"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
