--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
+    "ethereum-cryptography": "^1.0.3",
     "ethers": "^5.5.4",
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
