--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.26.0",
     "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "ethereum-cryptography": "^1.0.3",
     "ethers": "^5.5.4",
