convert to erc721, ipmlement lit protocol, write tests

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "ethereum-cryptography": "^1.0.3",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.5.4",
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
@@ -48,6 +49,7 @@
     "hardhat": "^2.9.3",
     "hardhat-gas-reporter": "^1.0.8",
     "ipfs-http-client": "^51.0.1",
+    "lit-js-sdk": "^1.1.182",
     "mocha": "^9.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
