--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.6.0",
+    "@rainbow-me/rainbowkit": "^0.4.1",
+    "@thirdweb-dev/react": "^2.4.8",
+    "@thirdweb-dev/sdk": "^2.3.24",
     "@toruslabs/torus-embed": "^1.21.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
@@ -58,6 +61,7 @@
     "solidity-coverage": "^0.7.20",
     "ts-node": "^10.5.0",
     "typechain": "^7.0.0",
+    "wagmi": "^0.5.9",
     "web3": "^1.7.0",
     "web3modal": "^1.9.5"
   },
