upload file, convert to using nft per item, deploy to poygon

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
     "deploy:mumbai": "npx hardhat run scripts/deploy.ts --network mumbai",
     "deploy:rinkeby": "npx hardhat run scripts/deploy.ts --network rinkeby",
+    "deploy:matic": "npx hardhat run scripts/deploy.ts --network matic",
     "flatten": "npx hardhat flatten > flattened.sol",
     "size": "yarn hardhat size-contracts",
     "clean": "npx hardhat clean",
@@ -57,6 +58,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-toastify": "^8.2.0",
     "solidity-coverage": "^0.7.20",
     "ts-node": "^10.5.0",
