--- a/package.json
+++ b/package.json
@@ -56,13 +56,17 @@
     "lit-js-sdk": "^1.1.182",
     "mocha": "^9.2.0",
     "next": "12.0.10",
+    "nft.storage": "^6.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^14.2.2",
     "react-toastify": "^8.2.0",
     "solidity-coverage": "^0.7.20",
+    "stream": "^0.0.2",
+    "stream-to-blob": "^2.0.1",
     "ts-node": "^10.5.0",
     "typechain": "^7.0.0",
+    "util": "^0.12.4",
     "wagmi": "^0.5.9",
     "web3": "^1.7.0",
     "web3modal": "^1.9.5"
