--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ethersproject/providers": "^5.5.3",
     "@mdi/js": "^6.9.96",
     "@mdi/react": "^1.6.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
